--- a/content/resources/11-139s15.md
+++ b/content/resources/11-139s15.md
@@ -9,8 +9,8 @@ file_type: image/jpeg
 image_metadata:
   caption: With its futuristic buildings and multicolor neon lights, Beijing is beginning
     to resemble the city from "Blade Runner," one of the films analyzed in this course.
-    (Image courtesy of [Trey Ratcliff](https://www.flickr.com/photos/stuckincustoms/6474655359/)
-    on Flickr. CC BY-NC-SA 2.0.)
+    (Image courtesy of {{% resource_link "dfff39d1-adfa-4c2e-909b-06a88564f881" "Trey
+    Ratcliff" %}} on Flickr. CC BY-NC-SA 2.0.)
   credit: Image courtesy of Trey Ratcliff on Flickr. CC BY-NC-SA 2.0.
   image-alt: A photograph of a city at night time. There is a plaza in the foreground,
     a large glass building in the middle, and a city skyline in the background. Many
