Sync all content

--- a/content/resources/13.md
+++ b/content/resources/13.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/11-139-the-city-in-film-spring-2015/f8ceba94bfdffe20e6be466c3b59b8ea_13.png
 file_size: 22970
 file_type: image/png
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: ''
   credit: ''
