--- a/content/resources/11-139s15-th.md
+++ b/content/resources/11-139s15-th.md
@@ -6,11 +6,13 @@ description: With its futuristic buildings and multicolor neon lights, Beijing i
 file: /courses/11-139-the-city-in-film-spring-2015/c8257e6a0aead930ac4fe2ef9b8477f8_11-139s15-th.jpg
 file_size: 12262
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: With its futuristic buildings and multicolor neon lights, Beijing is beginning
     to resemble the city from "Blade Runner," one of the films analyzed in this course.
-    (Image courtesy of {{% resource_link "dfff39d1-adfa-4c2e-909b-06a88564f881" "Trey
-    Ratcliff" %}} on Flickr. CC BY-NC-SA 2.0.)
+    (Image courtesy of [Trey Ratcliff](https://www.flickr.com/photos/stuckincustoms/6474655359/)
+    on Flickr. CC BY-NC-SA 2.0.)
   credit: Image courtesy of Trey Ratcliff on Flickr. CC BY-NC-SA 2.0.
   image-alt: A photograph of a city at night time. There is a plaza in the foreground,
     a large glass building in the middle, and a city skyline in the background. Many
